solc_mutator_ossfuzz_seed_corpus/test_sol/test_c79a175b35f7f026d5991d0eed76470247eadf9146782119b73a022c7484ec22_db31872cf2f78faf259b7257de60c6c9bc22799b_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  event ev0(bool indexed ep0);
  function f0(bytes16 i0,int80 i1) public    returns(string memory o0)
  {
  }
  function f1(bytes memory i0,int152 i1) public    returns(function (bytes12, int56) external   returns (int152, bytes20) o0)
  {
  }
  using L0 for *;
  function f2() private    returns(function (function () external   returns (bool, uint72, function (bytes7, bool, address payable) internal   returns (address, bytes30)), uint88) internal   returns (function (bytes27) internal   returns (int232, function (bytes20[1] memory, uint40) internal   returns (uint120, address payable), address payable)) o0)
  {
  }
  event ev1(int24  ep0, function () internal   returns (address payable, bool) indexed ep1, bytes[]  ep2);
  modifier m0() 
  {
    (function (bytes12, int56) external   returns (int152, bytes20) l0) = f1(bytes("000000000000000000000000000000ffffffffffffffffffffffffffffffffffffff"),int152((int152(((((int152(int168(0)) * int152(0)) & int152(2854495385411919762116571938898990272765493247)) % int152(825165572171078340000585013323936029806811224)) / int152(-2010360284115258308292725007079681242834037162))) / int152(2854495385411919762116571938898990272765493247))));
    _;
  }
  modifier m1() 
  {
    assembly
    {
    }
    _;
  }
}
library L1 {
  function f3(bool i0,address[] memory i1) external    returns(address payable o0)
  {
  }
  modifier m2() 
  {
    _;
  }
  function f4(function (bytes22) external  [] memory i0,int232 i1) public  m2()  returns(address payable o0)
  {
  }
  function f5(bytes20 i0) public  m2()  returns(address payable o0)
  {
    (address payable l0) = f4(new function (bytes22) external  [](1),int232(3450873173395281893717377931138512726225554486085193277581262111899647));
  }
  function f6(bytes memory i0,bytes memory i1) external  m2()  returns(function () external   o0)
  {
  }
}
pragma solidity >= 0.0.0;
using L1 for uint;
using L1 for uint;
using L1 for uint;
using L1 for uint;
using L1 for uint;

==== Source: su1.sol ====
uint176 constant cons0 = uint176((((((uint176(0) % uint176(0)) + uint176(7723624257418632784662641263094933069803306663576437)) + uint176(95780971304118053647396689196894323976171195136475135)) ** uint144(uint144(0))) / uint176(0)));
library L2 {
  function f7(address i0) public    returns(function (function (bool, bool) external   returns (bool)) external   returns (address payable) o0)
  {
  }
  function f8(int256 i0,uint256 i1,int168 i2) private   
  {
    (function (function (bool, bool) external   returns (bool)) external   returns (address payable) l0) = f7({i0: address(0x0000000000000000000000000000000000000008)});
  }
  event ev2(int232  ep0);
  function f9(bytes2 i0,bytes8[1][2] memory i1,bool i2) external   
  {
    revert(string("ffffffffffffffffffffffffffffffffffffffffffff0000000000000000000000000000000000000000000000"));
  }
  using L2 for *;
  function f10() external    returns(function (function (string memory, address payable) internal  , uint248, uint8) internal   o0)
  {
  }
  using L2 for *;
}
struct St0 {
  function () external   returns (uint64, uint40, uint56) el0;
  bytes27 el1;
}
pragma solidity >= 0.0.0;
// ----
// TypeError 2582: (su0.sol:366-445): Internal type cannot be used for external function type.
